# eluza-safe-ai-tool

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE_EVALUATION.txt  PACKAGE_MANIFEST.md  README.md  ROADMAP.md  index.html  pyproject.toml  report.md  results.html
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  demo-feedback.md  feature-proposal.md  protected-access.md  route-regression.md  test-case.md
demo/: offline_demo.html
docs/: access.md  concept.md  evaluation-protocol.html  evaluation-protocol.md  evaluation-report-template.html  evaluation-report-template.md  how-to-test.md  known-limitations.html  known-limitations.md  public-testing-kit.html  public-testing-kit.md  test-case-bank.html  test-case-bank.md
examples/: safety_cases.jsonl
src/eluza_safe_ai/: __init__.py  access_boundary.py  brain_language.py  cli.py  evaluator.py  fruit_classifier.py  memory_route.py  mizan_status.py  report.py  session.py  trace_schema.py
tests/: test_evaluator.py
